testdata/baselines/reference/submodule/conformance/decoratorOnClassMethodParameter1.es6.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
decoratorOnClassMethodParameter1.es6.ts(1,30): error TS2552: Cannot find name 'Object'. Did you mean 'object'?


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== decoratorOnClassMethodParameter1.es6.ts (1 errors) ====
    declare function dec(target: Object, propertyKey: string | symbol, parameterIndex: number): void;
                                 ~~~~~~
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
    
    export default class {
        method(@dec p: number) {}
    }